-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 17, 19, 20
-
Component/s: hotspot
-
b16
-
x86_64, aarch64
-
linux, os_x_10.15
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8295906 | 19.0.2 | Tobias Hartmann | P3 | Resolved | Fixed | b03 |
| JDK-8294191 | 17.0.6-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8294830 | 17.0.6 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
| JDK-8296304 | 15.0.10 | Yuri Nesterenko | P3 | Resolved | Fixed | b02 |
| JDK-8296303 | 13.0.14 | Yuri Nesterenko | P3 | Resolved | Fixed | b02 |
| JDK-8294179 | 11.0.18-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8295055 | 11.0.18 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
applications/kitchensink/Kitchensink.java
Here's a snippet from the log file:
[2022-09-14T15:08:07.706581Z] Gathering output for process 78436
[2022-09-14T15:08:10.520624Z] Waiting for completion for process 78436
[2022-09-14T15:08:10.520742Z] Waiting for completion finished for process 78436
Output and diagnostic info for process 78436 was saved into 'pid-78436-output.log'
[stress.process.out] #
[stress.process.out] # A fatal error has been detected by the Java Runtime Environment:
[stress.process.out] #
[stress.process.out] # Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S76232/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/86b575da-2730-4fc6-be89-1f5e1477b4a3/runs/db473f8b-0dc3-43fc-8cde-349ceaa211af/workspace/open/src/hotspot/share/ci/ciInstanceKlass.hpp:152), pid=78305, tid=40963
[stress.process.out] # assert(is_loaded()) failed: must be loaded
[stress.process.out] #
[stress.process.out] # JRE version: Java(TM) SE Runtime Environment (20.0+15) (fastdebug build 20-ea+15-995)
[stress.process.out] # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+15-995, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-amd64)
[stress.process.out] # Core dump will be written. Default location: core.78305
[stress.process.out] #
[stress.process.out] Unsupported internal testing APIs have been used.
[stress.process.out]
[stress.process.out] # An error report file with more information is saved as:
[stress.process.out] # /System/Volumes/Data/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S82503/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/92d8c17d-385a-464f-ab0c-919d141f0495/runs/38177cd3-a590-4880-ae83-12d2078d3d23/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/hs_err_pid78305.log
[stress.process.out] #
[stress.process.out] # Compiler replay data is saved as:
[stress.process.out] # /System/Volumes/Data/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S82503/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/92d8c17d-385a-464f-ab0c-919d141f0495/runs/38177cd3-a590-4880-ae83-12d2078d3d23/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/replay_pid78305.log
[stress.process.out] #
[stress.process.out] # If you would like to submit a bug report, please visit:
[stress.process.out] # https://bugreport.java.com/bugreport/crash.jsp
[stress.process.out] #
[2022-09-14T15:09:10.659984Z] Gathering output for process 78444
[2022-09-14T15:09:10.662536Z] Waiting for completion for process 78444
[2022-09-14T15:09:10.662603Z] Waiting for completion finished for process 78444
Output and diagnostic info for process 78444 was saved into 'pid-78444-output.log'
Stress process failed. See stress.process.err/stress.process.out files for details.
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007ff33c88dc10): JavaThread "C1 CompilerThread0" daemon [_thread_in_native, id=40963, stack(0x000070000368b000,0x000070000378b000)]
Current CompileTask:
C1:1032976 69195 b 3 org.sunflow.system.SearchPath::<init> (21 bytes)
Stack: [0x000070000368b000,0x000070000378b000], sp=0x0000700003788d40, free space=1015k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x12bcbb9] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6e9 (ciInstanceKlass.hpp:152)
V [libjvm.dylib+0x12bd24b] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x3b
V [libjvm.dylib+0x6cf28d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
V [libjvm.dylib+0x439819] GraphBuilder::call_register_finalizer()+0xd9
V [libjvm.dylib+0x439b1d] GraphBuilder::method_return(Instruction*, bool)+0x7d
V [libjvm.dylib+0x44456f] GraphBuilder::iterate_bytecodes_for_block(int)+0x1c7f
V [libjvm.dylib+0x4453ef] GraphBuilder::iterate_all_blocks(bool)+0x3f
V [libjvm.dylib+0x449b27] GraphBuilder::try_inline_full(ciMethod*, bool, bool, Bytecodes::Code, Instruction*)+0x12e7
V [libjvm.dylib+0x43f7ca] GraphBuilder::try_inline(ciMethod*, bool, bool, Bytecodes::Code, Instruction*)+0x23a
V [libjvm.dylib+0x43e762] GraphBuilder::invoke(Bytecodes::Code)+0xc72
V [libjvm.dylib+0x442da0] GraphBuilder::iterate_bytecodes_for_block(int)+0x4b0
V [libjvm.dylib+0x4453ef] GraphBuilder::iterate_all_blocks(bool)+0x3f
V [libjvm.dylib+0x449b27] GraphBuilder::try_inline_full(ciMethod*, bool, bool, Bytecodes::Code, Instruction*)+0x12e7
V [libjvm.dylib+0x43f7ca] GraphBuilder::try_inline(ciMethod*, bool, bool, Bytecodes::Code, Instruction*)+0x23a
V [libjvm.dylib+0x43e762] GraphBuilder::invoke(Bytecodes::Code)+0xc72
V [libjvm.dylib+0x442da0] GraphBuilder::iterate_bytecodes_for_block(int)+0x4b0
V [libjvm.dylib+0x4453ef] GraphBuilder::iterate_all_blocks(bool)+0x3f
V [libjvm.dylib+0x449b27] GraphBuilder::try_inline_full(ciMethod*, bool, bool, Bytecodes::Code, Instruction*)+0x12e7
V [libjvm.dylib+0x43f7ca] GraphBuilder::try_inline(ciMethod*, bool, bool, Bytecodes::Code, Instruction*)+0x23a
V [libjvm.dylib+0x43e762] GraphBuilder::invoke(Bytecodes::Code)+0xc72
V [libjvm.dylib+0x442da0] GraphBuilder::iterate_bytecodes_for_block(int)+0x4b0
V [libjvm.dylib+0x4453ef] GraphBuilder::iterate_all_blocks(bool)+0x3f
V [libjvm.dylib+0x449b27] GraphBuilder::try_inline_full(ciMethod*, bool, bool, Bytecodes::Code, Instruction*)+0x12e7
V [libjvm.dylib+0x43f7ca] GraphBuilder::try_inline(ciMethod*, bool, bool, Bytecodes::Code, Instruction*)+0x23a
V [libjvm.dylib+0x43e762] GraphBuilder::invoke(Bytecodes::Code)+0xc72
V [libjvm.dylib+0x442da0] GraphBuilder::iterate_bytecodes_for_block(int)+0x4b0
V [libjvm.dylib+0x4453ef] GraphBuilder::iterate_all_blocks(bool)+0x3f
V [libjvm.dylib+0x449b27] GraphBuilder::try_inline_full(ciMethod*, bool, bool, Bytecodes::Code, Instruction*)+0x12e7
V [libjvm.dylib+0x43f7ca] GraphBuilder::try_inline(ciMethod*, bool, bool, Bytecodes::Code, Instruction*)+0x23a
V [libjvm.dylib+0x43e762] GraphBuilder::invoke(Bytecodes::Code)+0xc72
V [libjvm.dylib+0x442da0] GraphBuilder::iterate_bytecodes_for_block(int)+0x4b0
V [libjvm.dylib+0x445435] GraphBuilder::iterate_all_blocks(bool)+0x85
V [libjvm.dylib+0x446e3f] GraphBuilder::GraphBuilder(Compilation*, IRScope*)+0x65f
V [libjvm.dylib+0x451db3] IRScope::IRScope(Compilation*, IRScope*, int, ciMethod*, int, bool)+0x213
V [libjvm.dylib+0x4527ab] IR::IR(Compilation*, ciMethod*, int)+0x5b
V [libjvm.dylib+0x427de4] Compilation::build_hir()+0x94
V [libjvm.dylib+0x42926b] Compilation::compile_java_method()+0x1cb
V [libjvm.dylib+0x429708] Compilation::compile_method()+0xa8
V [libjvm.dylib+0x429a7b] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, bool, DirectiveSet*)+0x28b
V [libjvm.dylib+0x42b9f1] Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0xd1
V [libjvm.dylib+0x653772] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x702
V [libjvm.dylib+0x652e68] CompileBroker::compiler_thread_loop()+0x288
V [libjvm.dylib+0xa1c2ce] JavaThread::thread_main_inner()+0x2be
V [libjvm.dylib+0x120d0a7] Thread::call_run()+0x177
V [libjvm.dylib+0xf6f95f] thread_native_entry(Thread*)+0x14f
C [libsystem_pthread.dylib+0x6109] _pthread_start+0x94
C [libsystem_pthread.dylib+0x1b8b] thread_start+0xf
- backported by
-
JDK-8294179 CI: ciBytecodeStream::get_klass() is not consistent
-
- Resolved
-
-
JDK-8294191 CI: ciBytecodeStream::get_klass() is not consistent
-
- Resolved
-
-
JDK-8294830 CI: ciBytecodeStream::get_klass() is not consistent
-
- Resolved
-
-
JDK-8295055 CI: ciBytecodeStream::get_klass() is not consistent
-
- Resolved
-
-
JDK-8295906 CI: ciBytecodeStream::get_klass() is not consistent
-
- Resolved
-
-
JDK-8296303 CI: ciBytecodeStream::get_klass() is not consistent
-
- Resolved
-
-
JDK-8296304 CI: ciBytecodeStream::get_klass() is not consistent
-
- Resolved
-
- relates to
-
JDK-8293044 C1: Missing access check on non-accessible class
-
- Closed
-
- links to
-
Commit
openjdk/jdk11u-dev/18d8559d
-
Commit
openjdk/jdk13u-dev/f0300249
-
Commit
openjdk/jdk15u-dev/74ce11f9
-
Commit
openjdk/jdk17u-dev/673b5056
-
Commit
openjdk/jdk19u/65001c38
-
Commit
openjdk/jdk/746f5f58
-
Review
openjdk/jdk11u-dev/1388
-
Review
openjdk/jdk13u-dev/426
-
Review
openjdk/jdk15u-dev/300
-
Review
openjdk/jdk17u-dev/771
-
Review
openjdk/jdk19u/52
-
Review(master)
openjdk/jdk/10294