8293816: CI: ciBytecodeStream::get_klass() is not consistent

Backport-of: 746f5f589db5c1036f15fa47f8a48b2a12c921ce